# crispy-forms-gds

./: .editorconfig  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CODEOWNERS  LICENCE.txt  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  codeql-analysis.yml  linting.yml  pypi.yml  python-checks.yml  python-tests.yml
demo/: .gitignore  context_processors.py  settings.py  urls.py
demo/backend/: context_processors.py  settings.py  urls.py
demo/backend/components/: __init__.py  urls.py  views.py
demo/backend/components/forms/: __init__.py  accordion.py  buttons.py  checkbox.py  checkboxes.py  complete.py  conditional_radios.py  date_input.py  details.py  fieldset.py  file_upload.py  inset.py  panel.py  radios.py  select.py  tabs.py  tag.py  text_input.py  textarea.py  warning.py
demo/backend/cookbook/: forms.py  models.py  urls.py  views.py
demo/backend/fields/: urls.py  views.py
demo/backend/fields/forms/: __init__.py  buttons.py  checkboxes.py  complete.py  file_upload.py  inset.py  radios.py  select.py  tag.py  text_input.py  textarea.py
demo/backend/forms/: forms.py  urls.py  views.py
demo/backend/forms/templates/: base.html
demo/backend/patterns/: forms.py  urls.py  views.py
demo/backend/templates/: base.html  index.html
demo/components/forms/: __init__.py  accordion.py  buttons.py  checkboxes.py  conditional_radios.py  date_input.py  fieldset.py  file_upload.py  panel.py  radios.py  select.py  tabs.py  text_input.py  textarea.py
demo/components/templates/components/: base.html  component.html  index.html
demo/frontend/: package-lock.json  package.json  webpack.config.js
demo/frontend/src/: index.js  index.scss
demo/frontend/src/styles/: index.scss  nav.scss
demo/static/css/: demo.css
demo/templates/demo/: base.html  index.html
docs/: .gitignore  conf.py  conf.rst  development.rst  example.rst  index.rst  install.rst  settings.py
docs/_static/css/: gds.css
docs/classes/: buttons.rst  constants.rst  containers.rst  content.rst  fields.rst  helper.rst  templatetags.rst
docs/components/: accordion.rst  back_link.rst  breadcrumbs.rst  button.rst  checkboxes.rst  date.rst  details.rst  fieldset.rst  file.rst  footer.rst  header.rst  index.rst  inset.rst  panel.rst  phase_banner.rst  radios.rst  select.rst  skip_link.rst  table.rst  tabs.rst  tag.rst  text.rst  text_input.rst  textarea.rst  warning.rst
docs/cookbook/: index.rst  introduction.rst
docs/cookbook/advanced/: index.rst
docs/cookbook/basics/: changing_label_sizes.rst  index.rst  labels_as_headings.rst
docs/cookbook/components/: index.rst  text_input.rst
docs/cookbook/fields/: changing_field_sizes.rst  index.rst
docs/cookbook/layouts/: index.rst
docs/cookbook/patterns/: index.rst
docs/developer/: project.rst
docs/reference/: constants.rst  filters.rst  templates.rst  templatetags.rst
docs/reference/form/: fields.rst  helper.rst  index.rst  widgets.rst
docs/reference/layout/: accordion.rst  button.rst  div.rst  field.rst  fieldset.rst  html.rst  index.rst  tabs.rst
docs/start/: demo.rst  example.rst  examples.rst  index.rst  install.rst  layouts.rst  settings.rst  tutorial.rst
requirements/: dev.in  dev.txt  docs.in  docs.txt  tests.in  tests.txt
src/crispy_forms_gds/: __init__.py  apps.py  choices.py  fields.py  helper.py  layout.py  utils.py  widgets.py
src/crispy_forms_gds/layout/: __init__.py  base.py  buttons.py  constants.py  containers.py  content.py  fields.py
src/crispy_forms_gds/templates/gds/: accordion-group.html  accordion.html  base.html  display_form.html  errors.html  errors_formset.html  field.html  inputs.html  uni_form.html  uni_formset.html  whole_uni_form.html  whole_uni_formset.html
src/crispy_forms_gds/templatetags/: crispy_forms_gds.py  crispy_forms_gds_field.py  crispy_forms_gds_tags.py
tests/: conftest.py  forms.py  settings.py  test_fields.py  urls.py  utils.py
tests/choices/: test_choice_rendering.py
tests/demo/: conftest.py  test_accordion.py  test_buttons.py  test_checkboxes.py  test_date_input.py  test_details.py  test_fieldset.py  test_file_upload.py  test_inset.py  test_panels.py  test_radios.py  test_radios_conditional.py  test_select.py  test_tabs.py  test_tag.py  test_text_input.py  test_textarea.py  test_warning.py
tests/expected/forms/: test_text_input.html
tests/fields/: test_buttons.py  test_checkbox.py  test_checkboxes.py  test_date_input_field.py  test_file_upload.py  test_radios.py  test_select.py  test_text_input.py  test_textarea.py
tests/fields/results/buttons/: disabled.html  initial.html  secondary.html  warning.html
tests/fields/results/checkbox/: initial.html  no_help_text_errors.html  validation_errors.html
tests/fields/results/checkboxes/: checkbox_size.html  initial.html  legend_size.html  no_help_text.html  no_help_text_errors.html  no_legend.html  validation_errors.html
tests/fields/results/file_upload/: initial.html  label_size.html  no_help_text.html  no_help_text_errors.html
tests/fields/results/radios/: initial.html  (+5 more)
tests/helpers/: test_form_helper.py
tests/layout/: test_accordion.py  test_buttons.py  test_checkbox.py  test_checkboxes.py  test_conditional_radios.py  test_date_input.py  test_field.py  test_fieldset.py  test_file_upload.py  test_radios.py  test_select.py  test_table.py  test_tabs.py  test_text_input.py  test_textarea.py
tests/templatetags/: test_links.py
tests/templatetags/results/: breadcrumbs.html
tests/unit/: conftest.py  settings.py  urls.py  utils.py
tests/unit/choices/: test_choice.py
tests/unit/fields/: test_date_input_field.py
tests/unit/helpers/: test_form_helper.py
tests/unit/layout/: test_accordion.py  test_buttons.py  test_checkbox.py  test_checkboxes.py  test_conditional_radios.py  test_date_input.py  test_fieldset.py  test_file_upload.py  test_radios.py  test_select.py  test_table.py  test_tabs.py  test_text_input.py  test_textarea.py
tests/unit/templatetags/: test_links.py
(+145 files in other folders)
